--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -51,12 +51,28 @@
     <main>
 
     </main>
-    <footer>
-        <div class="container py-20">
-            <a href="#">
-                <img src="images/logo.png" alt="">
-                <h3>Fruit Burst</h3>
+    <footer class="bg-color-dark">
+        <div class="container py-20 flex flex-col items-center gap-10">
+            <a href="#" class="flex gap-4 items-center">
+                <img src="images/logo.png" alt="" class="w-14">
+                <h3 class="text-white text-4xl font-bold">Fruit Burst</h3>
             </a>
+            <ul class="flex gap-x-8 gap-y-5 flex-wrap items-center justify-center">
+                <li><a href="#" class="text-white text-lg text-center">Home</a></li>
+                <li><a href="#" class="text-white text-lg text-center">About Us</a></li>
+                <li><a href="#" class="text-white text-lg text-center">Shop</a></li>
+                <li><a href="#" class="text-white text-lg text-center">All Fruits</a></li>
+                <li><a href="#" class="text-white text-lg text-center">Support</a></li>
+                <li><a href="#" class="text-white text-lg text-center">My Account</a></li>
+            </ul>
+            <ul class="flex gap-x-8 gap-y-5 flex-wrap items-center justify-center">
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#" class="text-white text-3xl text-center"><i class="fa-brands fa-apple"></i></a></li>
+            </ul>
         </div>
     </footer>
 </body>
