--- a/index.html
+++ b/index.html
@@ -49,7 +49,77 @@
 
     </header>
     <main>
-
+        <section id="team">
+            <div class="container my-10">
+                <div class="hero min-h-screen" style="background-image: url(images/team.png);">
+                    <div class="hero-overlay bg-zinc-950 bg-opacity-75"></div>
+                    <div class="hero-content text-center text-neutral-content flex flex-col py-10 text-white">
+                      <div class="max-w-2xl">
+                        <h1 class="mb-6 text-5xl font-extrabold">Meet the team section</h1>
+                        <p class="mb-10 text-base font-medium leading-relaxed">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                      </div>
+                      <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-5">
+                        <div class="px-4 py-5 flex flex-col items-center">
+                            <div class="w-40 aspect-square rounded-full overflow-auto mb-8">
+                                <img src="images/member1.png" alt="" class="w-full h-full object-cover">
+                            </div>
+                            <div>
+                                <h3 class="capitalize text-2xl font-bold pb-2">Awlad Hossain</h3>
+                                <p class="text-base font-medium capitalize pb-4">Fruits Expert</p>
+                                <ul class="flex justify-center gap-3">
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="px-4 py-5 flex flex-col items-center">
+                            <div class="w-40 aspect-square rounded-full overflow-auto mb-8">
+                                <img src="images/member2.png" alt="" class="w-full h-full object-cover">
+                            </div>
+                            <div>
+                                <h3 class="capitalize text-2xl font-bold pb-2">Safia Chowdhury</h3>
+                                <p class="text-base font-medium capitalize pb-4">Fruits Expert</p>
+                                <ul class="flex justify-center gap-3">
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="px-4 py-5 flex flex-col items-center">
+                            <div class="w-40 aspect-square rounded-full overflow-auto mb-8">
+                                <img src="images/member3.png" alt="" class="w-full h-full object-cover">
+                            </div>
+                            <div>
+                                <h3 class="capitalize text-2xl font-bold pb-2">Rokib Hossain</h3>
+                                <p class="text-base font-medium capitalize pb-4">Fruits Expert</p>
+                                <ul class="flex justify-center gap-3">
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="px-4 py-5 flex flex-col items-center">
+                            <div class="w-40 aspect-square rounded-full overflow-auto mb-8">
+                                <img src="images/member4.png" alt="" class="w-full h-full object-cover">
+                            </div>
+                            <div>
+                                <h3 class="capitalize text-2xl font-bold pb-2">Chaity</h3>
+                                <p class="text-base font-medium capitalize pb-4">Fruits Expert</p>
+                                <ul class="flex justify-center gap-3">
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#" class="w-10 aspect-square rounded-full grid place-items-center bg-color-primary text-xl"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
     </main>
     <footer class="bg-color-dark">
         <div class="container py-20 flex flex-col items-center gap-10">
