--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     center: true,
                     padding: {
                         DEFAULT: '20px',
-                        md: '50px'
+                        md: '50px',
                     },
                 },
-            }
+            },
         }
     </script>
     <style>
@@ -248,6 +248,84 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="chooseUs">
+            <div class="container py-20">
+                <div class="max-w-2xl text-center mx-auto">
+                    <h1 class="mb-2 md:mb-6 text-xl md:text-5xl font-extrabold text-color-dark">Why Choose Us</h1>
+                    <p class="mb-5 md:mb-10 text-sm md:text-base font-medium leading-relaxed text-color-para">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+                <div class="grid lg:grid-cols-3 gap-6 lg:gap-12">
+                    <div class="w-full rounded-lg overflow-hidden">
+                        <img src="images/whychoose1.png" alt="" class="w-full h-full object-cover">
+                    </div>
+                    <ul class="flex flex-col gap-6 lg:order-first pb-6 lg:pb-0">
+                        <li class="flex flex-col lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose1.png" alt="" class="w-full h-full">
+                            </div>
+                            <div class="text-center lg:text-left flex flex-col justify-center items-center lg:items-start">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">Dedicated Team</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </li>
+                        <li class="flex flex-col lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose2.png" alt="" class="w-full h-full">
+                            </div>
+                            <div class="text-center lg:text-left flex flex-col justify-center items-center lg:items-start">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">DFresh is Best</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </li>
+                        <li class="flex flex-col lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose3.png" alt="" class="w-full h-full">
+                            </div>
+                            <div class="text-center lg:text-left flex flex-col justify-center items-center lg:items-start">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">Gift Certificates</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="flex flex-col gap-6">
+                        <li class="flex flex-col-reverse lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="text-center lg:text-right flex flex-col justify-center items-center lg:items-end">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">Integrated Supplier</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose4.png" alt="" class="w-full h-full">
+                            </div>
+                        </li>
+                        <li class="flex flex-col-reverse lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="text-center lg:text-right flex flex-col justify-center items-center lg:items-end">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">Sustainable Practice</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose5.png" alt="" class="w-full h-full">
+                            </div>
+                        </li>
+                        <li class="flex flex-col-reverse lg:flex-row gap-6 items-center lg:items-start justify-center">
+                            <div class="text-center lg:text-right flex flex-col justify-center items-center lg:items-end">
+                                <h3 class="text-2xl font-extrabold pb-6 lg:pb-4">The Benefits Only</h3>
+                                <hr class="h-[3px] w-24 bg-color-dark-gray mb-4">
+                                <p class="text-color-para leading-relaxed">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="w-16 aspect-square flex-shrink-0">
+                                <img src="images/choose6.png" alt="" class="w-full h-full">
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
