deal overflow resolved

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         }
     </script>
     <style>
+        *{
+            box-sizing: border-box !important;
+        }
         body,
         .fontLato,
         button,
@@ -309,7 +312,7 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_apple.showModal()">Details</button>
                         <dialog id="fruit_apple" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto flex flex-col items-center bg-white overflow-hidden">
+                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit6.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Apples</h3>
                                 <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
@@ -383,7 +386,7 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_orange.showModal()">Details</button>
                         <dialog id="fruit_orange" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto flex flex-col items-center bg-white">
+                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit7.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Orange</h3>
                                 <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
@@ -457,7 +460,7 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_red_dragon.showModal()">Details</button>
                         <dialog id="fruit_red_dragon" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto flex flex-col items-center bg-white">
+                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit8.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Red Dragon</h3>
                                 <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
@@ -531,7 +534,7 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_banana.showModal()">Details</button>
                         <dialog id="fruit_banana" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto flex flex-col items-center bg-white">
+                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit9.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Apples</h3>
                                 <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
