--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
         }
     </script>
     <style>
-        *{
-            box-sizing: border-box !important;
-        }
         body,
         .fontLato,
         button,
@@ -53,7 +50,7 @@
     </style>
 </head>
 
-<body>
+<body class="box-border">
     <header>
         <nav class="container my-7">
             <div class="navbar bg-base-100 py-5 px-0 lg:px-6 rounded-full lg:bg-color-primary flex justify-between sticky top-0 z-50">
