--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         body,
         .fontLato,
         button,
-        input{
+        input {
             font-family: 'Lato', sans-serif;
         }
     </style>
@@ -53,7 +53,8 @@
 <body class="box-border">
     <header>
         <nav class="container my-7">
-            <div class="navbar bg-base-100 py-5 px-0 lg:px-6 rounded-full lg:bg-color-primary flex justify-between sticky top-0 z-50">
+            <div
+                class="navbar bg-base-100 py-5 px-0 lg:px-6 rounded-full lg:bg-color-primary flex justify-between sticky top-0 z-50">
                 <div class="hidden lg:block">
                     <ul class="flex gap-7 text-white text-lg">
                         <li><a href="#hero">Home</a></li>
@@ -87,7 +88,8 @@
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
                             <li><a>All Fruits</a></li>
-                            <form class="py-2 px-4 rounded-full bg-white overflow-hidden flex items-center gap-2 border-2 border-color-primary mt-3">
+                            <form
+                                class="py-2 px-4 rounded-full bg-white overflow-hidden flex items-center gap-2 border-2 border-color-primary mt-3">
                                 <input type="text" class="outline-none text-lg w-full">
                                 <button class="cursor-pointer">
                                     <i class="fa-solid fa-magnifying-glass text-2xl text-color-primary"></i>
@@ -309,10 +311,12 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_apple.showModal()">Details</button>
                         <dialog id="fruit_apple" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
+                            <form method="dialog"
+                                class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit6.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Apples</h3>
-                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
+                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you
+                                    to pick the most
                                     amazing and fresh fruits.</p>
                                 <div class="rating rating-md rating-half my-8">
                                     <input type="radio" name="fruit_apple" class="rating-hidden" />
@@ -383,10 +387,12 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_orange.showModal()">Details</button>
                         <dialog id="fruit_orange" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
+                            <form method="dialog"
+                                class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit7.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Orange</h3>
-                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
+                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you
+                                    to pick the most
                                     amazing and fresh fruits.</p>
                                 <div class="rating rating-md rating-half my-8">
                                     <input type="radio" name="fruit_orange" class="rating-hidden" />
@@ -457,10 +463,12 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_red_dragon.showModal()">Details</button>
                         <dialog id="fruit_red_dragon" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
+                            <form method="dialog"
+                                class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit8.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Red Dragon</h3>
-                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
+                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you
+                                    to pick the most
                                     amazing and fresh fruits.</p>
                                 <div class="rating rating-md rating-half my-8">
                                     <input type="radio" name="fruit_red_dragon" class="rating-hidden" />
@@ -531,10 +539,12 @@
                             class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
                             onclick="fruit_banana.showModal()">Details</button>
                         <dialog id="fruit_banana" class="modal bg-zinc-950/75 h-auto">
-                            <form method="dialog" class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
+                            <form method="dialog"
+                                class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
                                 <img src="images/fruit9.png" alt="" class="w-20 md:w-auto">
                                 <h3 class="text-lg md:text-4xl text-color-dark font-extrabold py-6">Apples</h3>
-                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you to pick the most
+                                <p class="text-color-para text-sm md:text-base">Professional employees are there for you
+                                    to pick the most
                                     amazing and fresh fruits.</p>
                                 <div class="rating rating-md rating-half my-8">
                                     <input type="radio" name="fruit_banana" class="rating-hidden" />
