--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div>
                     <div class="hidden lg:block">
                         <form class="py-2 px-4 rounded-full bg-white overflow-hidden flex items-center gap-2">
-                            <input type="text" class="outline-none text-lg w-full text-color-dark">
+                            <input type="text" class="outline-none text-base w-full text-color-dark" placeholder="Search here">
                             <button class="cursor-pointer">
                                 <i class="fa-solid fa-magnifying-glass text-2xl"></i>
                             </button>
@@ -90,7 +90,7 @@
                             <li><a>All Fruits</a></li>
                             <form
                                 class="py-2 px-4 rounded-full bg-white overflow-hidden flex items-center gap-2 border-2 border-color-primary mt-3">
-                                <input type="text" class="outline-none text-lg w-full">
+                                <input type="text" class="outline-none text-base w-full" placeholder="Search here">
                                 <button class="cursor-pointer">
                                     <i class="fa-solid fa-magnifying-glass text-2xl text-color-primary"></i>
                                 </button>
