--- a/index.html
+++ b/index.html
@@ -252,28 +252,28 @@
                     <div>
                         <div class="w-full flex justify-evenly items-start">
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">29</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">29</h2>
                                 <span class="capitalize text-color-para">Days</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">15</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">15</h2>
                                 <span class="capitalize text-color-para">Hours</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">25</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">25</h2>
                                 <span class="capitalize text-color-para">Minutes</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold">08</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">08</h2>
                                 <span class="capitalize text-color-para">Seconds</span>
                             </div>
                         </div>
