--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div
                 class="navbar bg-base-100 py-5 px-0 lg:px-6 rounded-full lg:bg-color-primary flex justify-between sticky top-0 z-50">
                 <div class="hidden lg:block">
-                    <ul class="flex gap-7 text-white text-lg">
+                    <ul class="flex gap-4 lg:gap-5 text-white text-base lg:text-lg">
                         <li><a href="#hero">Home</a></li>
                         <li><a href="#team">About Us</a></li>
                         <li><a href="#deal">Shop</a></li>
