--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         <section id="hero">
             <div class="container pb-20">
                 <div class="carousel w-full rounded-lg overflow-hidden">
-                    <div id="slide1" class="carousel-item relative w-full min-h-[80vh]">
+                    <div id="slide1" class="carousel-item relative w-full min-h-[400px]">
                         <div
-                            class="bg-[url('images/banner1.png')] w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white">
+                            class="bg-[url('images/banner1.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -133,10 +133,10 @@
                             </a>
                         </div>
                     </div>
-                    <div id="slide2" class="carousel-item relative w-full min-h-[80vh]">
+                    <div id="slide2" class="carousel-item relative w-full min-h-[400px]">
                         <div
-                            class="bg-[url('images/banner2.png')] w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white">
+                            class="bg-[url('images/banner2.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -158,10 +158,10 @@
                             </a>
                         </div>
                     </div>
-                    <div id="slide3" class="carousel-item relative w-full min-h-[80vh]">
+                    <div id="slide3" class="carousel-item relative w-full min-h-[400px]">
                         <div
-                            class="bg-[url('images/banner3.png')] w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white">
+                            class="bg-[url('images/banner3.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -183,10 +183,10 @@
                             </a>
                         </div>
                     </div>
-                    <div id="slide4" class="carousel-item relative w-full min-h-[80vh]">
+                    <div id="slide4" class="carousel-item relative w-full min-h-[400px]">
                         <div
-                            class="bg-[url('images/banner4.png')] w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white">
+                            class="bg-[url('images/banner4.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%] mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -243,7 +243,7 @@
         <section id="deal">
             <div class="container py-20 pt-0">
                 <div class="grid items-center gap-6 md:grid-cols-2 pb-8">
-                    <div class="w-full">
+                    <div class="w-full text-center md:text-left">
                         <h1 class="mb-2 md:mb-6 text-xl md:text-5xl font-extrabold text-color-dark">Deal of the day</h1>
                         <p class="mb-5 text-sm md:text-base font-medium leading-relaxed text-color-para">
                             Contrary to popular belief, is not simply random text. It has roots in a piece of classical
