--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div id="slide1" class="carousel-item relative w-full min-h-[400px]">
                         <div
                             class="bg-[url('images/banner1.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -136,7 +136,7 @@
                     <div id="slide2" class="carousel-item relative w-full min-h-[400px]">
                         <div
                             class="bg-[url('images/banner2.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -161,7 +161,7 @@
                     <div id="slide3" class="carousel-item relative w-full min-h-[400px]">
                         <div
                             class="bg-[url('images/banner3.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%]">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
@@ -186,7 +186,7 @@
                     <div id="slide4" class="carousel-item relative w-full min-h-[400px]">
                         <div
                             class="bg-[url('images/banner4.png')] bg-center bg-no-repeat bg-cover w-full py-10 px-8 lg:pb-28 text-center flex flex-col justify-center items-center relative">
-                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%] mx-auto w-[80%] mx-auto w-[80%]">
+                            <div class="relative z-10 max-w-2xl text-white mx-auto w-[80%]">
                                 <h1 class="text-2xl md:text-7xl font-bold pb-6">Exotic tastes at your doorstep</h1>
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
