--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <div>
                     <div class="hidden lg:block">
                         <form class="py-2 px-4 rounded-full bg-white overflow-hidden flex items-center gap-2">
-                            <input type="text" class="outline-none text-base w-full text-color-dark" placeholder="Search here">
+                            <input type="text" class="outline-none text-base w-full text-color-dark"
+                                placeholder="Search here">
                             <button class="cursor-pointer">
                                 <i class="fa-solid fa-magnifying-glass text-2xl"></i>
                             </button>
@@ -116,7 +117,7 @@
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
                                 <button
-                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg">Shop
+                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg capitalize">Shop
                                     Now</button>
                             </div>
                             <div class="bg-gradient-to-b from-zinc-950 absolute top-0 left-0 w-full h-full"></div>
@@ -141,7 +142,7 @@
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
                                 <button
-                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg">Shop
+                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg capitalize">Shop
                                     Now</button>
                             </div>
                             <div class="bg-gradient-to-b from-zinc-950 absolute top-0 left-0 w-full h-full"></div>
@@ -166,7 +167,7 @@
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
                                 <button
-                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg">Shop
+                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg capitalize">Shop
                                     Now</button>
                             </div>
                             <div class="bg-gradient-to-b from-zinc-950 absolute top-0 left-0 w-full h-full"></div>
@@ -191,7 +192,7 @@
                                 <p class="text-sm md:text-xl font-medium pb-8">We supply highly quality organic products
                                 </p>
                                 <button
-                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg">Shop
+                                    class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg capitalize">Shop
                                     Now</button>
                             </div>
                             <div class="bg-gradient-to-b from-zinc-950 absolute top-0 left-0 w-full h-full"></div>
@@ -252,67 +253,74 @@
                     <div>
                         <div class="w-full flex justify-evenly items-start">
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">29</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">29
+                                </h2>
                                 <span class="capitalize text-color-para">Days</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                </h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">15</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">15
+                                </h2>
                                 <span class="capitalize text-color-para">Hours</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                </h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">25</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">25
+                                </h2>
                                 <span class="capitalize text-color-para">Minutes</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                </h2>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">08</h2>
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">08
+                                </h2>
                                 <span class="capitalize text-color-para">Seconds</span>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <div
-                        class="w-full rounded-lg border-2 border-color-para/10 p-6 text-center flex flex-col items-center">
-                        <img src="images/fruit6.png" alt="" class="h-32 mb-7">
+                    class="w-full rounded-lg border-2 border-color-para/10 p-6 text-center flex flex-col items-center">
+                    <img src="images/fruit6.png" alt="" class="h-32 mb-7">
                         <h3 class="text-color-dark text-2xl font-bold">12.90$ - 18.85$</h3>
                         <hr class="w-3/4 max-w-[244px] h-[2px] bg-color-para/10 my-6">
                         <p class="text-color-para">Apples</p>
                         <div class="rating rating-md rating-half my-6">
                             <input type="radio" name="fruit_apple" class="rating-hidden" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-1" />
+                            class="bg-color-primary mask mask-star-2 mask-half-1" />
                             <input type="radio" name="fruit_apple"
                                 class="bg-color-primary mask mask-star-2 mask-half-2" />
                             <input type="radio" name="fruit_apple" class="bg-color-primary mask mask-star-2 mask-half-1"
                                 checked />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-2" />
+                            class="bg-color-primary mask mask-star-2 mask-half-2" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-1" />
+                            class="bg-color-primary mask mask-star-2 mask-half-1" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-2" />
+                            class="bg-color-primary mask mask-star-2 mask-half-2" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-1" />
+                            class="bg-color-primary mask mask-star-2 mask-half-1" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-2" />
+                            class="bg-color-primary mask mask-star-2 mask-half-2" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-1" />
+                            class="bg-color-primary mask mask-star-2 mask-half-1" />
                             <input type="radio" name="fruit_apple"
-                                class="bg-color-primary mask mask-star-2 mask-half-2" />
+                            class="bg-color-primary mask mask-star-2 mask-half-2" />
                         </div>
                         <button
-                            class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
-                            onclick="fruit_apple.showModal()">Details</button>
+                        class="btn btn-link capitalize text-color-primary no-underline text-lg font-bold py-2 px-5"
+                        onclick="fruit_apple.showModal()">Details</button>
                         <dialog id="fruit_apple" class="modal bg-zinc-950/75 h-auto">
                             <form method="dialog"
                                 class="modal-box h-auto max-h-none flex flex-col items-center bg-white">
@@ -351,7 +359,7 @@
                                             class="btn bg-transparent text-color-primary border-2 border-color-primary py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg h-auto hover:bg-color-primary hover:text-white hover:border-color-primary capitalize">Close</button>
                                     </div>
                                     <button
-                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg">Buy
+                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg capitalize">Buy
                                         Now</button>
                                 </div>
                             </form>
@@ -427,7 +435,7 @@
                                             class="btn bg-transparent text-color-primary border-2 border-color-primary py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg h-auto hover:bg-color-primary hover:text-white hover:border-color-primary capitalize">Close</button>
                                     </div>
                                     <button
-                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg">Buy
+                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg capitalize">Buy
                                         Now</button>
                                 </div>
                             </form>
@@ -503,7 +511,7 @@
                                             class="btn bg-transparent text-color-primary border-2 border-color-primary py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg h-auto hover:bg-color-primary hover:text-white hover:border-color-primary capitalize">Close</button>
                                     </div>
                                     <button
-                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg">Buy
+                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg capitalize">Buy
                                         Now</button>
                                 </div>
                             </form>
@@ -579,12 +587,17 @@
                                             class="btn bg-transparent text-color-primary border-2 border-color-primary py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg h-auto hover:bg-color-primary hover:text-white hover:border-color-primary capitalize">Close</button>
                                     </div>
                                     <button
-                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg">Buy
+                                        class="bg-color-primary text-white py-2 md:py-3 px-5 md:px-8 text-base md:text-xl font-extrabold rounded-lg capitalize">Buy
                                         Now</button>
                                 </div>
                             </form>
                         </dialog>
                     </div>
+                </div>
+                <div class="text-center">
+                    <button
+                        class="bg-color-primary text-white py-4 px-8 text-lg md:text-xl font-extrabold rounded-lg mt-12 capitalize">Shop
+                        all</button>
                 </div>
             </div>
         </section>
