--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                                 <span class="capitalize text-color-para">Days</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </h2>
                             </div>
                             <div class="text-center">
@@ -267,7 +268,8 @@
                                 <span class="capitalize text-color-para">Hours</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </h2>
                             </div>
                             <div class="text-center">
@@ -276,7 +278,8 @@
                                 <span class="capitalize text-color-para">Minutes</span>
                             </div>
                             <div class="text-center">
-                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">:
+                                <h2 class="text-3xl md:text-5xl text-color-dark leading-relaxed font-extrabold pb-2">
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </h2>
                             </div>
                             <div class="text-center">
