--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@
 
         <section id="team">
             <div class="container my-10">
-                <div class="hero min-h-screen rounded-lg overflow-hidden"
-                    style="background-image: url(images/team.png);">
+                <div class="hero min-h-screen rounded-lg overflow-hidden bg-[url('images/team.png')] bg-center bg-no-repeat bg-cover"
+                    >
                     <div class="hero-overlay bg-zinc-950 bg-opacity-75"></div>
                     <div class="hero-content text-center text-neutral-content flex flex-col py-10 text-white">
                         <div class="max-w-2xl">
