--- a/index.html
+++ b/index.html
@@ -612,7 +612,8 @@
                     <div class="hero-overlay bg-zinc-950 bg-opacity-75"></div>
                     <div class="hero-content text-center text-neutral-content flex flex-col py-10 text-white">
                         <div class="max-w-2xl">
-                            <h1 class="mb-2 md:mb-6 text-xl md:text-5xl font-extrabold">Meet the team section</h1>
+                            <h1 class="mb-6 text-5xl font-extrabold hidden md:block">Meet the team section</h1>
+                            <h1 class="mb-2 text-xl font-extrabold md:hidden">Meet the team</h1>
                             <p class="mb-5 md:mb-10 text-sm md:text-base font-medium leading-relaxed">Contrary to
                                 popular belief, is not
                                 simply random text. It has roots in a piece of classical Latin literature from 45 BC,
