navbar issue fixed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body class="box-border">
     <header>
-        <nav class="container my-7">
+        <nav class="container my-0 lg:my-7">
             <div
                 class="navbar bg-base-100 py-5 px-0 lg:px-6 rounded-full lg:bg-color-primary flex justify-between sticky top-0 z-50">
                 <div class="hidden lg:block">
